--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Jolo</title>
-</head>
-<body>
-    My site
-</body>
-</html>
+---
+layout: default
+title: Jolo Balbin
+---
+<h1>Jolo</h1>
