--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 ---
 layout: default
-title: Jolo Balbin
+title: About Me
 ---
-<h1>Jolo</h1>
-
-	<h1>{{ page.title }}</h1>
-	<ul class="posts">
-
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+<h3>{{ page.title }}</h3>
+<h3>Posts</h3>
+<ul class="posts">
+  {% for post in site.posts reversed %}
+    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> | <span>{{ post.date | date_to_string }}</span></li>
+  {% endfor %}
+</ul>
