--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Jolo Balbin
 <h3>Posts</h3>
 <ul class="posts">
   {% for post in site.posts %}
-    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</li>
+    <li><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> | {{ post.date | date: "%B %-d, %Y" }}</li>
   {% endfor %}
 </ul>
 <h3>Research</h3>
