--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Jolo Balbin
 ---
 <h3>About Me</h3>
-<p>I'm <strong>Jolo Balbin</strong>, a software and AI engineer. I'm formerly the CTO of <a href="https://www.indigoresearch.xyz/">Indigo Research</a>. I like building software applications with AI capabilities then scaling them up into production.</p>
+<p>I'm <strong>Jolo Balbin</strong>, a software and AI engineer. Currently exploring technology and working as a software engineer at Agoda.</p>
+<p>I'm formerly the CTO of <a href="https://www.indigoresearch.xyz/">Indigo Research</a>. I like building software applications with AI capabilities then scaling them up into production.</p>
 <p>I created TextTeaser, an open source automatic summarization algorithm for my thesis. Check it out at <a href="https://github.com/IndigoResearch/textteaser">Github</a>. I also have an experience in data science working with jobs and telco data. I also have no problem in gathering datasets with my experience in scraping different stuff.</p>
 <p>Outside of software, I do wall climbing and bouldering, join various sports activies, listening to audiobooks and living the life with people.</p>
 <p></p>
